--- a/nav_bar/style.css
+++ b/nav_bar/style.css
@@ -50,6 +50,14 @@ a {
     padding: 8px 12px;
 }
 
+.navbar__toogleBtn {
+    display: none;
+    position: absolute;
+    right: 32px; /* 오른쪽에서 32px 떨어져 */
+    font-size: 24px;
+    color: #d49466;
+}
+
 @media screen and (max-width: 768px) {
     .navbar {
         flex-direction: column;
@@ -58,6 +66,7 @@ a {
     }
 
     .navbar__menu {
+        display: none;
         flex-direction: column;
         align-items: center;
         width: 100%;
@@ -70,8 +79,13 @@ a {
     }
 
     .navbar__icons {
+        display: none;
         justify-content: center;
         width: 100%;
         padding-left: 0;
+    }
+
+    .navbar__toogleBtn {
+        display: block;
     }
 }
