feat: 클릭이벤트 처리 with js

--- a/nav_bar/style.css
+++ b/nav_bar/style.css
@@ -88,4 +88,9 @@ a {
     .navbar__toogleBtn {
         display: block;
     }
+
+    .navbar__menu.active,
+    .navbar__icons.active {
+        display: flex;
+    }
 }
