--- a/nav_bar/style.css
+++ b/nav_bar/style.css
@@ -1,3 +1,9 @@
+:root {
+    --text-color: #f0f4f5;
+    --background-color: #263343;
+    --accent-color: #d49466;
+}
+
 body {
     margin: 0;
     font-family: 'Source Code Pro';
@@ -22,7 +28,7 @@ a {
 }
 
 .navbar__logo i {
-    color: #d49466;
+    color: var(--accent-color);
 }
 
 .navbar__menu {
